- Refactoring - Third party maven repo - JSON documentation generation